[package]
name = "rocket_docs_tests"
version = "0.6.0-dev"
workspace = "../../"
edition = "2021"
publish = false

[dependencies]
rocket = { path = "../../core/lib", features = ["secrets"] }

[dev-dependencies]
rocket = { path = "../../core/lib", features = ["secrets", "json", "mtls"] }
figment = { version = "0.10", features = ["toml", "env"] }
tokio = { version = "1", features = ["macros", "io-std"] }
rand = "0.8"

[dev-dependencies.rocket_dyn_templates]
path = "../../contrib/dyn_templates"
features = ["tera"]

[dev-dependencies.rocket_db_pools]
path = "../../contrib/db_pools/lib"
features = ["sqlx_sqlite"]

[dev-dependencies.rocket_ws]
path = "../../contrib/ws"
