[package]
name = "cookies"
version = "0.0.1"
workspace = "../../"

[dependencies]
rocket = { path = "../../lib" }
rocket_codegen = { path = "../../codegen" }
lazy_static = "*"

[dependencies.rocket_contrib]
path = "../../contrib"
default-features = false
features = ["handlebars_templates"]

[dev-dependencies]
rocket = { path = "../../lib", features = ["testing"] }
