[package]
name = "handlebars_templates"
version = "0.0.1"
workspace = "../../"

[dependencies]
rocket = { path = "../../lib" }
rocket_codegen = { path = "../../codegen" }
serde = "*"
serde_derive = "*"
serde_json = "*"

[dependencies.rocket_contrib]
path = "../../contrib"
default-features = false
features = ["handlebars_templates"]

[dev-dependencies]
rocket = { path = "../../lib", features = ["testing"] }
