[package]
name = "handlebars_templates"
version = "0.0.1"
workspace = "../../"

[dependencies]
rocket = { path = "../../lib" }
rocket_codegen = { path = "../../codegen" }
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"

[dependencies.rocket_contrib]
path = "../../contrib"
default-features = false
features = ["handlebars_templates"]

[dev-dependencies]
rocket = { path = "../../lib", features = ["testing"] }
