[package]
name = "json"
version = "0.0.1"
workspace = "../../"

[dependencies]
rocket = { path = "../../lib" }
rocket_codegen = { path = "../../codegen" }
serde = "0.8"
serde_json = "0.8"
serde_derive = "0.8"
lazy_static = "*"

[dependencies.rocket_contrib]
path = "../../contrib"
default-features = false
features = ["json"]

[dev-dependencies]
rocket = { path = "../../lib", features = ["testing"] }
