[package]
name = "json"
version = "0.0.0"
workspace = "../"
edition = "2018"
publish = false

[dependencies]
rocket = { path = "../../core/lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
path = "../../contrib/lib"
default-features = false
features = ["json"]
