[package]
name = "session"
version = "0.0.0"
workspace = "../../"
edition = "2018"
publish = false

[dependencies]
rocket = { path = "../../core/lib", features = ["private-cookies"] }

[dependencies.rocket_contrib]
path = "../../contrib/lib"
default-features = false
features = ["handlebars_templates"]
