[package]
name = "templating"
version = "0.0.0"
workspace = "../"
edition = "2018"
publish = false

[dependencies]
rocket = { path = "../../core/lib" }

[dependencies.rocket_contrib]
path = "../../contrib/lib"
default-features = false
# in your application, you should enable only the template engine(s) used
features = ["tera_templates", "handlebars_templates"]
