[package]
name = "todo"
version = "0.0.0"
workspace = "../"
edition = "2018"
publish = false

[dependencies]
rocket = { path = "../../core/lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.3"
log = "0.4"

[dev-dependencies]
parking_lot = "0.11"
rand = "0.8"

[dependencies.rocket_contrib]
path = "../../contrib/lib"
default_features = false
features = ["tera_templates", "diesel_sqlite_pool", "serve"]
