[package]
name = "uuid"
version = "0.1.0"
workspace = "../../"

[dependencies]
rocket = { path = "../../lib" }
rocket_codegen = { path = "../../codegen" }
uuid = "^0.3"
lazy_static = "^0.2"

[dependencies.rocket_contrib]
default-features = false
path = "../../contrib"
features = ["uuid"]

[dev-dependencies]
rocket = { path = "../../lib", features = ["testing"] }
