[package]
name = "rocket_guide_tests"
version = "0.0.0"
workspace = "../../"
edition = "2018"
publish = false

[dev-dependencies]
rocket = { path = "../../core/lib", features = ["secrets"] }
doc-comment = "0.3"
rocket_contrib = { path = "../../contrib/lib", features = ["json", "tera_templates", "diesel_sqlite_pool"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.7"
figment = { version = "0.9.2", features = ["toml", "env"] }
