[package]
name = "rocket_guide_tests"
version = "0.5.0-dev"
workspace = "../../"
edition = "2018"
publish = false

[dependencies]
rocket = { path = "../../core/lib", features = ["secrets"] }

[dev-dependencies]
rocket = { path = "../../core/lib", features = ["secrets", "json"] }
rocket_contrib = { path = "../../contrib/lib", features = ["tera_templates", "diesel_sqlite_pool"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }
time = "0.2"
